--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
     <div class="container">
         <div class="row">
-            <p>Bladimir Fernando Hernandez Jaramillo</p>
-            <p>Aplicaciones de internet</p>
-            <p>Division de Ingenierias (DICIS)</p>
+            <p class="my-1"><em><strong>BladimirFernando Hernandez Jaramillo</strong> </em></p>
+            <p class="my-1"><em><strong>Aplicaciones de internet</strong> </em></p>
+            <p class="my-1"><em><strong>Division de Ingenierias (DICIS)</strong> </em></p>
         </div>
-        <div class="row">
-            <h1 class="my-5">To-do list📝</h1>
+        <div class="row text-center">
+            <h1 class="my-2">To-do list📝</h1>
         </div>
         <form id = "formulario">
             <label for="task">Task</label>
