--- a/index.html
+++ b/index.html
@@ -2,51 +2,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>To-Do🤯</title>
+    <title>To - Do</title>
 </head>
 <body>
     <div class="container">
-        <div class="row">
-            <p class="my-1"><em><strong>BladimirFernando Hernandez Jaramillo</strong> </em></p>
-            <p class="my-1"><em><strong>Aplicaciones de internet</strong> </em></p>
-            <p class="my-1"><em><strong>Division de Ingenierias (DICIS)</strong> </em></p>
+        <div class="row text-center">
+            <p class="my-0 mx-0 fs-5 fst-italic text-success">Bladimir Fernando Hernandez Jaramillo</p>
+            <p class="my-0 mx-0 fs-5 fst-italic text-success">Aplicaciones de Internet</p>
+            <p class="my-0 mx-0 mb-3 fs-5 fst-italic text-success">Division de Ingenierías Campus Irapuato-Salamanca</p>
         </div>
         <div class="row text-center">
-            <h1 class="my-2">To-do list📝</h1>
+            <h1 class="my-4 fw-bold fs-1">ToDo List 📝📆</h1>
         </div>
-        <form id = "formulario">
-            <label for="task">Task</label>
+        <form id="formulario">
             <input type="text"
-                name="task"
-                placeholder="task"
-                class="form-control my-2"
+                   name="task"
+                   placeholder="Task to add"
+                   class="form-control my-2"
             >
-            <div>
-                <button class="btn btn-primary" type="submit">Save</button>
-            </div>
+            <div class="d-grid">
+                <button class="btn btn-primary" type="submit">Save ⚡</button>
+            </div>     
         </form>
         <hr>
-        <div id = "Lista tareas" class="mt-2">
+        <div id="lista-tareas" class="mt-2">
             <div class="alert alert-dark">
-                No task pending📜
+                No task pending
             </div>
         </div>
     </div>
-    <template id="template">
+
+    <template id="template"> 
         <div class="alert alert-warning d-flex justify-content-between align-items-center">
-            <p class="m-0">Tarea#1</p>
+            <p class="m-0">Tarea #1</p>
             <h3 class="m-0">
                 <i class="fa-solid fa-circle-check text-success" role="button"></i>
-                <i class="fa-solid fa-circle-minus text-danger"  role="button"></i>
+                <i class="fa-solid fa-circle-minus text-danger" role="button"></i>
             </h3>
         </div>
     </template>
 
-    <script src="./js/todo.js"></script>
+    <script src="./js/todo.js"></script>    
 </body>
 </html>
-
